--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,7 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^5.0.0",
-    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git",
     "semantic-ui-react": "^2.1.1",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2",
