--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,6 +10,7 @@
     "mobx": "^6.4.1",
     "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
@@ -44,11 +45,12 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
+    "@types/react-calendar": "^3.4.5",
     "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-router-dom": "^5.3.2",
+    "@types/uuid": "^8.3.4"
   }
 }
