--- a/client-app/package.json
+++ b/client-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "history": "^4.10.1",
     "mobx": "^6.4.1",
     "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^8.2.0",
     "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git",
     "semantic-ui-react": "^2.1.1",
     "typescript": "^4.5.5",
@@ -50,7 +52,7 @@
     "@types/react": "^17.0.39",
     "@types/react-calendar": "^3.4.5",
     "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
+    "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4"
   }
 }
