--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=eventr.db"
-  }
+  },
+  "TokenKey": "super secret key change me"
 }
